# sga-exp-eman

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
app/: main.py
app/api/v1/endpoints/: tickets.py
app/api/v1/routers/: auth.py
app/db/: connection.py
app/models/: user.py
app/schemas/: auth.py  ticket.py
app/server/: dependencies.py
